--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@
   left: 0;
   right: 0;
   bottom: 0;
+  align-items: center;
+  overflow:unset;
   
 }
 
@@ -24,4 +26,5 @@
   display: flex;
   grid-gap: 20px;
 }
+
 
